--- a/style.css
+++ b/style.css
@@ -90,6 +90,10 @@ h1#greeting {
     margin:5px;
 }
 
+#todo-list {
+    font-size: 1.2em;
+}
+
 button {
     padding-left:5px; padding-right:5px; 
     margin: 7px;
