--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 
 #clock {
     font-size:5.5em;
-    margin:30px 0 30px 0;
+    margin:20px 0 30px 0;
 }
 
 #login-input{
@@ -91,7 +91,7 @@ body {
 }
 
 #greeting, #name-reinput {
-    margin-top:0;
+    margin-bottom: 20px;
     font-size: 40px;
     font-weight: 570;
     
